# etebase-py

./: Cargo.toml  build.rs
.github/workflows/: push.yml  test.yml
etebase/: __init__.py  etebase_python.pyi
src/: lib.rs
tests/: test_smoketest.py
