[package]
name = "etebase-python"
description = "Python bindings to etebase-rs"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etesync-rs/tree/etebase/python/"
version = "0.31.5"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", rev = "9752fe5a7a57280213e38c0f532a4748467f3f61" }
env_logger = "^0.7"
log = "^0.4.6"

[dependencies]
cpython = { version = "0.7", features = ["extension-module"] }
openssl = { version = "0.10.30", features = ["vendored"] }
etebase = { version = "^0.5.1" }
